added artifactory configuration

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
+		<repository>
+        <id>snapshots</id>
+        <name>panodimos-ltm.internal.salesforce.com-snapshots</name>
+        <url>http://localhost:8081/artifactory/libs-snapshot-local</url>
+    </repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
