--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="MULE_LIB/com.mulesoft.connectors/mule-microsoft-dotnet-connector/3.0.2"/>
 	<classpathentry kind="con" path="MULE_LIB/org.mule.extension.elasticsearch/elasticsearch-connector/1.0.0"/>
 	<classpathentry kind="con" path="MULE_LIB/org.mule.module/mule-java-module/1.0.0"/>
 	<classpathentry kind="con" path="MULE_LIB/org.mule.connectors/mule-sockets-connector/1.1.1"/>
