--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>pfj-healthcheck</artifactId>
+	<artifactId>pfj-healthcheck-CICD</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
 	<name>pfj-healthcheck-CICD</name>
